Fixed h3 spacing

--- a/jean_site/static/styles.css
+++ b/jean_site/static/styles.css
@@ -25,9 +25,9 @@ h3 {
     grid-column: 2/12;
 }
 
-h3:first-of-type {
-    margin-top: 0;
-}
+/*h3:first-of-type {*/
+/*    margin-top: 0;*/
+/*}*/
 
 h4 {
     font-size: 18px;
